--- a/public/Nitrocid.Addons/Nitrocid.Extras.Dates/Resources/Languages/Output/Localizations.ko.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Dates/Resources/Languages/Output/Localizations.ko.resx
@@ -124,43 +124,43 @@
     <value>날짜 및 시간 정보를 가져옵니다.</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_MS" xml:space="preserve">
-    <value>밀리 초 :</value>
+    <value>밀리 초</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_SECONDS" xml:space="preserve">
-    <value>초 :</value>
+    <value>초</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_MINUTES" xml:space="preserve">
-    <value>의사록:</value>
+    <value>의사록</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_HOURS" xml:space="preserve">
-    <value>시간:</value>
+    <value>시간</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_DAYS" xml:space="preserve">
-    <value>요일 :</value>
+    <value>요일</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_MONTHS" xml:space="preserve">
-    <value>개월 :</value>
+    <value>개월</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_YEARS" xml:space="preserve">
-    <value>년:</value>
+    <value>년</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_DAYOFYEAR" xml:space="preserve">
-    <value>일 :</value>
+    <value>일</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_DAYOFWEEK" xml:space="preserve">
-    <value>요일 :</value>
+    <value>요일</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_BINARY" xml:space="preserve">
-    <value>바이너리 :</value>
+    <value>바이너리</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_LOCALTIME" xml:space="preserve">
-    <value>현지 시각:</value>
+    <value>현지 시각</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_UNIVERSALTIME" xml:space="preserve">
-    <value>세계시 :</value>
+    <value>세계시</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_UNIXTIME" xml:space="preserve">
-    <value>유닉스 시간 :</value>
+    <value>유닉스 시간</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_DATEINFOCANTPARSE1" xml:space="preserve">
     <value>날짜 정보를 파싱하지 못했습니다.</value>
@@ -169,10 +169,10 @@
     <value>형식이 올바른지 확인하십시오.</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_DATE" xml:space="preserve">
-    <value>데이트:</value>
+    <value>데이트</value>
   </data>
   <data name="NKS_DATES_TIMEINFO_TIME" xml:space="preserve">
-    <value>시각:</value>
+    <value>시각</value>
   </data>
   <data name="NKS_DATES_COMMAND_STOPWATCH_DESC" xml:space="preserve">
     <value>간단한 스톱워치</value>
