--- a/public/Nitrocid.Addons/Nitrocid.Extras.Dates/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Dates/Resources/Languages/jpn.json
@@ -16,55 +16,55 @@
     },
     {
       "loc": "NKS_DATES_TIMEINFO_MS",
-      "text": "ミリ秒:"
+      "text": "ミリ秒"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_SECONDS",
-      "text": "秒:"
+      "text": "秒"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_MINUTES",
-      "text": "分:"
+      "text": "分"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_HOURS",
-      "text": "時間："
+      "text": "時間"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DAYS",
-      "text": "日々："
+      "text": "日々"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_MONTHS",
-      "text": "月:"
+      "text": "月"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_YEARS",
-      "text": "年："
+      "text": "年"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DAYOFYEAR",
-      "text": "年間通算日:"
+      "text": "年間通算日"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DAYOFWEEK",
-      "text": "曜日："
+      "text": "曜日"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_BINARY",
-      "text": "バイナリ："
+      "text": "バイナリ"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_LOCALTIME",
-      "text": "現地時間："
+      "text": "現地時間"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_UNIVERSALTIME",
-      "text": "世界時:"
+      "text": "世界時"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_UNIXTIME",
-      "text": "Unix 時間:"
+      "text": "Unix 時間"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DATEINFOCANTPARSE1",
@@ -76,11 +76,11 @@
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DATE",
-      "text": "日付："
+      "text": "日付"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_TIME",
-      "text": "時間："
+      "text": "時間"
     },
     {
       "loc": "NKS_DATES_COMMAND_STOPWATCH_DESC",
