--- a/public/Nitrocid.Addons/Nitrocid.Extras.Dates/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Dates/Resources/Languages/ptg.json
@@ -26,55 +26,55 @@
     },
     {
       "loc": "NKS_DATES_TIMEINFO_MS",
-      "text": "Milissegundos:"
+      "text": "Milissegundos"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_SECONDS",
-      "text": "Segundos:"
+      "text": "Segundos"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_MINUTES",
-      "text": "Minutos:"
+      "text": "Minutos"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_HOURS",
-      "text": "Horas:"
+      "text": "Horas"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DAYS",
-      "text": "Dias:"
+      "text": "Dias"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_MONTHS",
-      "text": "Meses:"
+      "text": "Meses"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_YEARS",
-      "text": "Ano:"
+      "text": "Ano"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DAYOFYEAR",
-      "text": "Dia do ano:"
+      "text": "Dia do ano"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DAYOFWEEK",
-      "text": "Dia da semana:"
+      "text": "Dia da semana"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_BINARY",
-      "text": "Binário:"
+      "text": "Binário"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_LOCALTIME",
-      "text": "Horário local:"
+      "text": "Horário local"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_UNIVERSALTIME",
-      "text": "Tempo Universal:"
+      "text": "Tempo Universal"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_UNIXTIME",
-      "text": "Hora Unix:"
+      "text": "Hora Unix"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DATEINFOCANTPARSE1",
@@ -86,11 +86,11 @@
     },
     {
       "loc": "NKS_DATES_TIMEINFO_DATE",
-      "text": "Data:"
+      "text": "Data"
     },
     {
       "loc": "NKS_DATES_TIMEINFO_TIME",
-      "text": "Tempo:"
+      "text": "Tempo"
     },
     {
       "loc": "NKS_DATES_COMMAND_STOPWATCH_DESC",
